# GreenHomeLan_RpiPanel

./: .gitignore  README.md  periodic_task.py  pyproject.toml
server/: __init__.py  app.py
server/common/: __init__.py
server/common/exception/: __init__.py  code.py  handler.py  model.py
server/config/: logging-config.yml  rpi-electrical-panel-config.yml
server/interfaces/: __init__.py
server/interfaces/mqtt/: __init__.py  client.py  model.py
server/relays_manager/: __init__.py  service.py
server/rest_api/relays_manager/: __init__.py  rest_controler.py  rest_model.py
service/: rpi-electrical-panel.service
test_scripts/: __init__.py  mqtt_publisher_test.py  mqtt_subscriber_test.py
